--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-*.vcxproj
+*.sln
+**/*.vcxproj
+**/*.vcxproj.*
+**/*.i
+**/*.obj
 
 # User-specific files
 *.rsuser
